--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -14,10 +14,56 @@ const {title, description, thumbnailPath = '', slug, tags} = Astro.props as Prop
 
 ---
 
-<div class='card projectCard' id={title} data-tags={tags}>
-    {thumbnailPath != '' && <img src = {thumbnailPath} alt={title + " thumbnail"}/>}
-    <h3>{title}</h3>
-    <p>{description}</p>
-    <TagDisplay tags={tags} project={title}/>
+<div class='card' id={title}>
+    <div class="projectCard" data-tags={tags}>
+        {thumbnailPath !== '' && <img src = {thumbnailPath} alt={title + " thumbnail"} class="thumbnail" />}
+        <div class="details">
+            <h3>{title}</h3>
+            <TagDisplay tags={tags} project={title} isSmall={true}/>
+            <p>{description}</p>
+        </div>
+    </div>
     <a class="btn" href={`/${slug}`}>Read More</a>
 </div> 
+
+<style>
+    .projectCard {
+        display: flex;
+        align-items: center;
+        margin-bottom: 25px;
+    }
+
+    .projectCard .thumbnail {
+        display: inline-block;
+        width: 30%;
+    }
+    
+    .projectCard .details {
+        display: inline-block;
+        margin-left: 10px;
+        flex-grow: 1;
+    }
+
+    h3 {
+        margin-bottom: 0;
+    }
+
+    p {
+        margin-top: 0;
+        width: 100%;
+    }
+
+    @media screen and (max-width: 750px) {
+        .projectCard {
+          flex-direction: column;
+          align-items: flex-start;
+        }
+        
+        .projectCard .thumbnail {
+            width: 100%;
+            max-width: 500px;
+            margin: 0 auto;
+        }
+    }
+
+</style>
