--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -78,10 +78,7 @@ a {
 }
 
 .card img {
-    width: 100%;
-    max-width: 500px;
     display: block;
-    margin: 0 auto ;
     border-radius: 10px;
 }
 
@@ -106,6 +103,21 @@ a {
     justify-content: center;
 }
 
+/* Similar to .btn */
+.inlineBtn, .markdown a {
+    display: inline-block;
+    padding: 0.1rem 0.5rem;
+    border-radius: 5px;
+    background: var(--color-btn);
+    color: var(--color-text);
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    letter-spacing: 1px;
+    text-align: center;
+    text-decoration: none;
+    transform: translateY(-0.1rem);
+}
+
 /* Tags */
 
 .tag-container.card {
@@ -117,6 +129,12 @@ a {
     margin-bottom: 20px;
 }
 
+.tag-container.tag-container-small.card {
+    background: initial;
+    padding: 0px;
+    margin-bottom: 0px;
+}
+
 .tag-container p {
     margin-right: 10px;
 }
@@ -124,6 +142,8 @@ a {
     padding: 0;
     margin: 0;
     display: flex;
+    flex-wrap: wrap;
+
     align-items: center;
     list-style: none;
 }
@@ -179,21 +199,10 @@ a {
     border-style: solid;
 }
 
-
-/* Markdown / Project posts */
-
-/* Similar to .btn */
-.inlineBtn, .markdown a {
+/* Utility */
+.inlineBlock {
     display: inline-block;
-    padding: 0.1rem 0.5rem;
-    border-radius: 5px;
-    background: var(--color-btn);
-    color: var(--color-text);
-    text-transform: uppercase;
-    font-size: 0.75rem;
-    letter-spacing: 1px;
-    text-align: center;
-    text-decoration: none;
-    transform: translateY(-0.1rem);
+    width: 49%;
 }
+
 /* Media Queries */
