--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,6 +6,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/projects">Projects</a></li>
                 <li><a href="/search">Search</a></li>
+                <li><a href="/searchProject">Search Proj</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/contact">Contact</a></li>
                 <!-- <li><a href="index.html">
