Add meta tag description for SEO.
Also add start date and release date as optional for markdown

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title = "Home">
+<Layout title = "Home" description="Portfolio Home Page">
 	<h1>Hello World</h1>
 </Layout>
     
