--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -71,7 +71,7 @@ SeperateTags();
 
 ---
 
-<Layout title = "Search">
+<Layout title = "Search" description="Porfolio Projects">
 	<h1>Search</h1>
     <section>
         <div class="container searchBar">
