--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -32,7 +32,7 @@ const userLocale="en-UK";
 // console.log(headings);
 ---
 
-<Layout title={data.title}>
+<Layout title={data.title} description={data.shortDescription}>
     <article>
         <div class="container">
             <div class="card">
@@ -40,7 +40,12 @@ const userLocale="en-UK";
                 <img src={data.thumbnailPath} alt={data.title + " image"}>
                 <div style="height: 25px;"></div> <!-- Small block to seperate img and tags -->
                 <TagDisplay tags={data.tags} project={data.title}/>
-                <h4><strong>Release Date: </strong>{new Date(data.releaseDate).toLocaleDateString(userLocale, dateOptions)}</h4>
+                {data.startDate &&
+                    <h4><strong>Start Date: </strong>{new Date(data.startDate).toLocaleDateString(userLocale, dateOptions)}</h4>
+                }
+                {data.releaseDate &&
+                    <h4><strong>Release Date: </strong>{new Date(data.releaseDate).toLocaleDateString(userLocale, dateOptions)}</h4>
+                }
                 <ul class="markdown list-of-links">
                     <li>{data.projectLink != null && <a href={data.projectLink}>Project Link</a>}</li>
                     <li>{data.githubLink != null && <a href={data.githubLink}>GitHub Link</a>}</li>
