--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -7,7 +7,7 @@ import { getCollection } from "astro:content";
 const cards = await getCollection("projects");
 ---
 
-<Layout title = "Projects">
+<Layout title = "Projects" description="Porfolio Projects">
 	<h1>Projects</h1>
     <section>
         <div class="container">
