--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 :root {
     font-size: 16px;
-    font-family: 'Roboto', sans-serif;
+    font-family: sans-serif;
 
     /* Colors 
         - Background & text colors are in .light and .dark classes
