Add Table Of Content, Duration for projects, change btn css for projects for only outside markdown, remove some font related stuff

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,8 +20,9 @@
     .header {
         height: 70px;
         background: var(--color-secondary);
-        font-family: 'League Spartan', sans-serif;
-        font-size: 1.25rem;
+        font-family: 'Calibri', sans-serif;
+        font-size: 1.5rem;
+        font-weight: bold;
     }
     
     .header .container {
