--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,6 +35,10 @@ a {
     color: var(--color-btn);
 }
 
+details summary h3 {
+    display: inline;
+}
+
 ::-webkit-scrollbar {
     width: 15px;
 }
@@ -104,7 +108,7 @@ a {
 }
 
 /* Similar to .btn */
-.inlineBtn, .markdown a {
+.inlineBtn {
     display: inline-block;
     padding: 0.1rem 0.5rem;
     border-radius: 5px;
