Add base for event registration project page

--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -134,10 +134,17 @@ function dateDiff(startDate: Date, endDate: Date) : string {
     .markdown img {
         width: 100%;
         max-width: 500px;
+        max-height: 100vh;
+        margin: 20px auto;
+        object-fit: contain;
     }
 
     .markdown a {
         text-decoration: underline;
+    }
+
+    .markdown h3 {
+        margin-bottom: 0.5em;
     }
 
 </style>
