Change markdown h3 to h2 for better clarity

--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -143,8 +143,9 @@ function dateDiff(startDate: Date, endDate: Date) : string {
         text-decoration: underline;
     }
 
-    .markdown h3 {
+    .markdown h2 {
         margin-bottom: 0.5em;
+        /* font-size: 1.75em; */
     }
 
 </style>
