--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -4,7 +4,6 @@ import Layout from "../layouts/Layout.astro";
 import TagDisplay from "../components/TagDisplay.astro";
 import { CollectionEntry, getCollection } from "astro:content";
 import { Tags } from "../others/tags";
-import { date } from "astro/zod";
 import TableOfContent from "../components/TableOfContent.astro";
 
 export async function getStaticPaths() {
@@ -39,7 +38,6 @@ if (data.startDate && data.releaseDate)
 {
     duration = dateDiff(data.startDate, data.releaseDate);
 }
-
 
 function dateDiff(startDate: Date, endDate: Date) : string {
     let yearDiff = endDate.getFullYear() - startDate.getFullYear();
@@ -94,13 +92,13 @@ function dateDiff(startDate: Date, endDate: Date) : string {
                     <h4>Duration: {duration}</h4>
                 }
                 <ul class="list-of-links">
-                    <li>{data.projectLink != null && <a href={data.projectLink} class="inlineBtn">Project Link</a>}</li>
-                    <li>{data.githubLink != null && <a href={data.githubLink} class="inlineBtn">GitHub Link</a>}</li>
+                    <li>{data.projectLink != null && <a href={data.projectLink} class="inlineBtn" target="_blank">Project Link</a>}</li>
+                    <li>{data.githubLink != null && <a href={data.githubLink} class="inlineBtn" target="_blank">GitHub Link</a>}</li>
                 </ul>
                 <hr>
                 
                 <TableOfContent headings={headings}/>
-                <h3>Description</h3>
+                <h2>Description</h2>
                 <p>{data.shortDescription}</p>
                 <div class="markdown">
                     <Content />
@@ -149,3 +147,13 @@ function dateDiff(startDate: Date, endDate: Date) : string {
     }
 
 </style>
+
+<script>
+    const links = document.getElementsByTagName("a");
+    for (let i = 0; i < links.length; i++) {
+        const link = links[i];
+        const url = new URL(link.href);
+        if (url.host !== window.location.host)
+            link.target = "_blank";    
+    }
+</script>
