Other small changes
Mainly remove contact page, change to gnoxnahte.com/about#contact

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -45,7 +45,7 @@ import Layout from "../layouts/Layout.astro";
                 </details>
             </div>
             <div>
-                <h2>Contact</h2>
+                <h2 id="contact">Contact</h2>
                 <p>Email: <a href="mailto:gnoxnahte.dev@gmail.com">gnoxnahte.dev@gmail.com</a></p>
                 <p>Twitter: <a href="https://twitter.com/GnoxNahteDev" target="_blank">https://twitter.com/GnoxNahteDev</a></p>
                 <p>GitHub: <a href="https://github.com/GnoxNahte" target="_blank">https://github.com/GnoxNahte</a></p>
