Add more info in home and about page.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -45,7 +45,7 @@
     .header a {
         color: var(--color-text);
     }
-    @media screen and (max-width: 650px) {
+    /* @media screen and (max-width: 650px) {
     .header {
         height: 250px;
     }
@@ -65,7 +65,7 @@
 
     #header-home {
         display: none;
-    }
+    } */
 }
 
 </style>
